tests/invalid/merge_inst_error.err_exp
merge_inst_error.m:060: In clause for `switch1(in, out)':
merge_inst_error.m:060:   error: [38;5;203mmode mismatch[39;49m in disjunction.
merge_inst_error.m:060:   The variable [38;5;87m`S'[39;49m is [38;5;203mground[39;49m in 4 out of 6 branches.
merge_inst_error.m:060:   It has non-ground instantiation states in the
merge_inst_error.m:060:   following branches.
merge_inst_error.m:047:     In this branch, `S' is [38;5;171mfree.[39;49m
merge_inst_error.m:053:     In this branch, `S' is [38;5;171mfree.[39;49m
merge_inst_error.m:093: In clause for `switch2(in, out)':
merge_inst_error.m:093:   error: [38;5;203mmode mismatch[39;49m in disjunction.
merge_inst_error.m:093:   The variable [38;5;87m`S'[39;49m is [38;5;203mground[39;49m in 5 out of 6 branches.
merge_inst_error.m:077:     In this branch, `S' is [38;5;171mfree.[39;49m
merge_inst_error.m:124: In clause for `switch3(in, out)':
merge_inst_error.m:124:   error: [38;5;203mmode mismatch[39;49m in disjunction.
merge_inst_error.m:124:   The variable [38;5;87m`S'[39;49m is ground in some branches but not
merge_inst_error.m:124:   others.
merge_inst_error.m:111:     In this branch, `S' is [38;5;171mground.[39;49m
merge_inst_error.m:114:     In this branch, `S' is [38;5;171mground.[39;49m
merge_inst_error.m:118:     In this branch, `S' is [38;5;171mfree.[39;49m
merge_inst_error.m:121:     In this branch, `S' is [38;5;171mfree.[39;49m
merge_inst_error.m:124:     In this branch, `S' is [38;5;171mfree.[39;49m
For more information, recompile with `-E'.
